# telegram-bot-client

./: .dockerignore  .gcloudignore  .gitignore  DOCKER_HUB_SETUP.md  Dockerfile  GCLOUD.md  LICENSE  README.md  WARP.md  config.ini-default  config.yaml-default  entrypoint.sh  health_server.py  profiles.json  pyproject.toml  requirements.txt  telegram_api.py  telegram_bot_client.py  telegram_cli.py  telegram_listen.py  telegram_mcp.py
.github/workflows/: docker-build.yml  pypi-publish.yml
Formula/: telegram-client.rb
adapters/: __init__.py  base.py  http.py  mongodb.py  rabbitmq.py  stdout.py
completions/: _telegram-cli  _telegram-listen  telegram-cli.bash  telegram-cli.fish  telegram-listen.bash  telegram-listen.fish
k8s/: .gitignore  DEPLOYMENT_SUMMARY.md  QUICKSTART.md  README.md  check-status.sh  connect-init.sh  connect-shell.sh  deploy-all.sh  deploy.sh  deployment.yaml  kustomization.yaml  pvc.yaml  secret-create.sh.template  secrets-commands.md  service.yaml  tg  undeploy-all.sh
k8s_mod/: README.md  deploy.sh  deployment.yaml  pvc.yaml  secret.yaml  undeploy.sh
scripts/: generate_completions.sh
tg/: __init__.py  commands.py  core.py  listeners.py
